--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = "1.0.94"
 derive_builder = "0.12.0"
 reqwest = { version = "0.11.14", default-features = false, features = ["json"], optional = true }
 serde = { version = "1.0.157", features = ["derive"] }
+once_cell = "1.17.1"
 
 [dev-dependencies]
 dotenvy = "0.15.7"
